--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,30 +1,31 @@
-html {}
 body, .description p {
-    font-family: 'Open Sans', sans-serif;
-    font-size:16px;
-    color:#000000;
-    font-weight:300;
-}
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
+  color: #ccc;
+  font-weight: 300;
+  background-color: #B31C2C; }
 
-nav {	font-family: 'Oswald', sans-serif;
-		text-transform:uppercase;
-		font-size: 1.2em;
-		font-weight: 500;
-		color:#000;
+nav {
+  font-family: 'Oswald', sans-serif;
+  text-transform: uppercase;
+  font-size: 1.2em;
+  font-weight: 500;
+  color: #B31C2C; }
 
-		}
-nav a {color:#000;}
-nav a:active {color:#000;}
-nav a:hover { color: #b31c2c;}
+nav a {
+  color: #000; }
 
+nav a:active {
+  color: #000; }
+
+nav a:hover {
+  color: rojoMassey; }
 
 .carousel .item {
-  height: 300px;
-}
+  height: 300px; }
 
 .item img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    min-height: 300px;
-}
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-height: 300px; }
